Add necessary dependencies and automatically select classifier